# ISRSolver

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  ISRSolverConfig.cmake.in  README.md  docker-compose.yml  env.sh.in
docker/: Dockerfile  docker-compose.yml  install.sh  yadisk.py
inc/: RadSolver.h  getIntegral.h  phyConstants.h  sigmaCoefficients.h
include/: BaseISRSolver.hpp  BaseISRSolver2.hpp  BaseRangeInterpolator.hpp  BaseRangeInterpolator2.hpp  CSplineRangeInterpolator.hpp  CSplineRangeInterpolator2.hpp  Chi2Test.hpp  ISRSolver.hpp  ISRSolverSLAE.hpp  ISRSolverSLE.hpp  ISRSolverSLE2.hpp  ISRSolverStructs.hpp  ISRSolverTSVD.hpp  ISRSolverTikhonov.hpp  ISRSolverVCSFitter.hpp  Integration.hpp  Interpolator.hpp  Interpolator2.hpp  IterISRInterpSolver.hpp  KuraevFadin.hpp  LinearRangeInterpolator.hpp  LinearRangeInterpolator2.hpp  PhysicalConstants.hpp  PyFitVCS.hpp  PyISRSolver.hpp  PyISRSolverSLE.hpp  PyISRSolverTSVD.hpp  PyISRSolverTikhonov.hpp  PyIterISRInterpSolver.hpp  PyIterISRSolverUseVCSFit.hpp  PyKuraevFadin.hpp  PyUtils.hpp  RadSolver.h  RadSolver.hpp  RangeInterpolator.hpp  RatioTest.hpp  Utils.hpp  integration.hpp  kuraev_fadin.hpp  physical_constants.hpp  (+2 more)
notebooks/: condnum_enspread.ipynb  convolution.ipynb  naive_method_etapipi_1.ipynb  naive_method_etapipi_2.ipynb  tikhonov_regularization_etapipi.ipynb
src/: BaseISRSolver.cpp  BaseISRSolver2.cpp  BaseRangeInterpolator.cpp  BaseRangeInterpolator2.cpp  CSplineRangeInterpolator.cpp  CSplineRangeInterpolator2.cpp  Chi2Test.cpp  ISRSolver.cpp  ISRSolverSLAE.cpp  ISRSolverSLE.cpp  ISRSolverSLE2.cpp  ISRSolverTSVD.cpp  ISRSolverTikhonov.cpp  ISRSolverVCSFitter.cpp  Integration.cpp  Interpolator.cpp  Interpolator2.cpp  IterISRInterpSolver.cpp  KuraevFadin.cpp  LinearRangeInterpolator.cpp  LinearRangeInterpolator2.cpp  PyISR.cpp  RadSolver.cpp  RangeInterpolator.cpp  RatioTest.cpp  Utils.cpp  convolution.cpp  getIntegral.cpp  integration.cpp  isrmain.cpp  isrsolver-KuraevFadin-convolution.cpp  isrsolver-LCurve-plot.cpp  isrsolver-SLAE-chi2-test.cpp  isrsolver-SLAE-chi2test.cpp  isrsolver-SLAE-ratio-test.cpp  isrsolver-SLAE.cpp  isrsolver-SLE-chi2-test.cpp  isrsolver-SLE-ratio-test.cpp  isrsolver-SLE.cpp  isrsolver-SLE2.cpp  (+34 more)
